Add '25w43a' sources